# hs-algopuzzle-tutorial

./: LICENSE  README.md  tutorial.cabal
app/: Main.hs
src/: No001MagicSquare.hs  No002nQueenProblem.hs
