name:                tutorial
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/number64tech/hs-algopuzzle-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              TODOROKI Daisuke (number64tech)
maintainer:          number64tech@gmail.com
copyright:           2016 number64tech
category:            
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     No001MagicSquare
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tutorial
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tutorial
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/number64tech/hs-algopuzzle-tutorial
